<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"

        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-3dp"
        android:src="@mipmap/mianbg" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@mipmap/title"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_an"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:background="@drawable/button"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_name_an"
            android:textColor="#e6ac16"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/button_fr"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:background="@drawable/button"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_name_fr"
            android:textColor="#e6ac16"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/button_fl"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:background="@drawable/button"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_name_fl"
            android:textColor="#e6ac16"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/button_ic"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:background="@drawable/button"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_name_ic"
            android:textColor="#e6ac16"
            android:textSize="25sp"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="55dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:scaleType="fitXY"
        app:srcCompat="@mipmap/music" />

    <Button
        android:id="@+id/button_ex"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="#c7f2a2"
         />


</RelativeLayout>