<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="3dp">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifImageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            android:src="@mipmap/roundtop" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="63dp"
            android:layout_height="51dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/arrow" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="@color/colorRoundMedium">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"

                    android:background="@drawable/enroundbtn"
                    android:text="@string/order1"
                    android:textColor="@color/colorRoundBtn" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/enroundbtn"
                    android:text="@string/order2"
                    android:textColor="@color/colorRoundBtn" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/enroundbtn"
                    android:text="@string/order3"
                    android:textColor="@color/colorRoundBtn" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>